tests/parser/bad/stmts_t-match-spid-underscore.scilla
scilla_version 0

library TestLib

let a = True

contract Test
()

transition a ()
  match a wiff
  | _ => accept
  end
end
